<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_student"
        android:enabled="true"
        android:icon="@drawable/ic_group_black_24dp"
        android:title="@string/student"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_lecturer"
        android:enabled="true"
        android:icon="@drawable/ic_school_black_24dp"
        android:title="@string/lecturer"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_about"
        android:enabled="true"
        android:icon="@drawable/ic_more_horiz_black_24dp"
        android:title="@string/more"
        app:showAsAction="ifRoom" />
</menu>