<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.mgilangjanuar.dev.civitasearch.modules.student.view.StudentDetailActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="84dp"
                android:layout_height="84dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/student_image"
                    android:layout_width="84dp"
                    android:layout_height="84dp"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/student"/>

                <ImageButton
                    android:id="@+id/edit_image"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignBottom="@id/student_image"
                    android:layout_alignRight="@id/student_image"
                    android:layout_alignEnd="@id/student_image"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_edit_white_24dp"
                    android:background="@drawable/background_default_green" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/student_information"
                android:background="#e0e0e0"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:overScrollMode="never"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/additional"
                android:background="#e0e0e0"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/contacts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:overScrollMode="never"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_add_white_24dp"
        app:layout_behavior="com.mgilangjanuar.dev.civitasearch.util.ScrollAwareFABBehavior"/>

</android.support.design.widget.CoordinatorLayout>
